--- a/index.html
+++ b/index.html
@@ -39,16 +39,24 @@
       color: #333;
     }
 
+    .logo-wrapper {
+      width: 500px;
+      height: 75px;
+      overflow: hidden; /* Crop the image */
+      margin-bottom: 20px;
+    }
+
     .logo {
-      width: 250px;
-      height: 40px;
-      object-fit: cover; /* Crop the image */
-      margin-bottom: 30px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   </style>
 </head>
 <body>
-<img src="./images/Logo.png" alt="Logo" class="logo">
+<div class="logo-wrapper">
+    <img src="images/logo.png" alt="Logo" class="logo">
+</div>
 <div class="header">Site in Progress</div>
 <div class="content">
     <div class="icon">🚧</div>
